# texture-mapping

data/: obj.ply
texture_mapping_openmvs/: CMakeLists.txt  texture_mapping_openmvs.cpp
texture_mapping_pcl/: CMakeLists.txt  texture_mapping.cpp
visualizer/: view_obj.cpp  view_obj.py
